# galaxyng-server

./: .cvsignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  NEWS  README  THANKS  TODO  _gngserver  configure.in
config/: readline.m4  sys_errlist.m4  sys_siglist.m4
doc/: Makefile.am  gngserver.texi
gngserver/: Diagnostic.cpp  Diagnostic.h  Envelope.h  ExamplePlugin.h  Makefile.am  Orders.h  Plugin-h.in  Plugin.h  Plugin_h.in  SharedLibrary.h  builtin.cpp  builtin.h  common-h.in  common.h  error.cpp  error.h  eval.cpp  eval.h  gngObject.cpp  gngObject.h  gngObjectTest.cpp  gngObjectTest.h  gngObjectTestMain.cpp  gngserver.cpp  gngserver.h  list.cpp  list.h  ltdl.c  module.cpp  module.h  syntax.cpp  syntax.h  xmalloc.cpp  xstrdup.cpp  xstrerror.cpp
modules/: ExampleGenericPlugin.cpp  Makefile.am  cd.cpp  dollar.cpp  eval.cpp  sqrt.cpp  unknown.cpp
replace/: Makefile.am  basename.c  readline.cpp  strcspn.cpp  strerror.cpp  strsignal.cpp  strspn.c  vfprintf.c  vfprintf.cpp  waitpid.cpp
src/: Makefile.am  Plugin.cpp  gngserver.cpp  gngserver_builtin.cpp  gngserver_repl.cpp  gngserver_repl.h  gngserver_syntax.cpp
tests/: defs
